--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 
     <div class="container">
         <h1>Hello, I'm Jef Ramos!</h1>
-        <p>Welcome to my personal introduction page. I'm passionate about coding, technology, and building intuitive user interfaces.</p>
-        <p>Feel free to get to know me better as you explore this page!</p>
+        <p>I watch a lot of movies and animes and i also play a bunch of games on my free time.</p>
+        <p>There's nothing interesting about me!</p>
     </div>
 
 </body>
